--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     PopupIndex(); // only for index.html
   });
 </script>
-<script defer src="assets/site.js"></script>
+<script defer src="assets/popup.js"></script>
 <meta name="theme-color" content="#0e7c86">
 </head>
 <body>
